--- a/src/index.css
+++ b/src/index.css
@@ -503,28 +503,72 @@ body{
   border: none;
   border-radius: 0.6rem;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  background-color: orange;
   position: relative;
-  flex: 1;
+  width: 22rem;
 }
-
-.fifthFlex{
-  justify-content: space-around;
+.singleVisit,.maintain{
+  margin-top: 10rem;
 }
-
-.singleVisit .singleVisit1,.demand .demand1{
+.singleVisit .singleVisit1,.demand .demand1,.maintain .maintain1{
   background-color: darkslategray;
   position: absolute;
   top: 0;
   right: 0;
   left: 0;
-  padding: 5rem;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  padding-bottom: 3rem;
 }
 
-.singleVisit ,.singleVisit2{
-  padding-top: 10rem;
+.singleVisit,.demand,.maintain{
+  text-align: center;
+  font-size: 1.3rem;
+  
+}
+
+.singleVisit1 button, .demand1 button,.maintain1 button{
+  padding: 2rem;
+  font-size: 1.8rem;
+  letter-spacing: 0.1rem;
+  border: 1px solid rgba(255, 255, 255, 0.76);
+  border-radius: 5px;
+  color: white;
+  background-color: transparent;
+  box-shadow: inset 0 0 10px rgba(0,0,0,0.3);
+}
+
+.it{
+  font-size: 1rem;
+}
+.singleVisit .singleVisit2, .demand .demand2,.maintain .maintain2{
+  padding-top: 20rem;
+  color: black;
+}
+
+.singleVisit2 button,.demand2 button, .maintain2 button{
+  border: none;
+  background-color: darkslategray;
+  padding: 15px;
+  font-size: 1.1rem;
+  color: white;
+  width: 10rem;
+  margin-top: 1rem;
+  margin-bottom: 5rem;
+  border-radius: 12px;
+  background-image: linear-gradient(to right, darkslategray 70%,#ddfceed3);
+  color: white;
+  transition: background-image 5s ease-in-out, cursor 5s ease-in-out;
+}
+
+.singleVisit2 button:hover,.demand2 button:hover, .maintain2 button:hover{
+  background-image: linear-gradient(to right, #ddfceed3 2%, darkslategray 70% );
+  cursor: pointer;
 }
 
 .demand .demand2{
+  padding-top: 18rem;
+}
+
+.maintain .maintain2{
   padding-top: 20rem;
 }
