--- a/src/index.css
+++ b/src/index.css
@@ -209,7 +209,7 @@ body{
 }
 
 /* second part */
-.secondPart,.thirdPart,.fourthPart, .fifthPart{
+.secondPart,.thirdPart,.fourthPart, .fifthPart,.sixthPart,.seventhPart,.eightPart,footer{
   position: relative;
   top: 3rem;
   padding-left: 6rem;
@@ -233,7 +233,7 @@ body{
   -webkit-font-smoothing: antialiased;
 }
 
-.chooseUs p, .paintService p, .TeamService p, .priceService p{width: 30rem;}
+.chooseUs p, .paintService p, .TeamService p, .priceService p,.testService p,.projectService p,.blogService p{width: 30rem;}
 
 @keyframes increase {
   0% {
@@ -246,10 +246,10 @@ body{
     font-size: 1.5rem; /* Back to normal size */
   }
 }
-.chooseUs .increase, .paintService .h2Third, .TeamService .h2Fourth, .priceService .h2Fifth{
+.chooseUs .increase, .paintService .h2Third, .TeamService .h2Fourth, .priceService .h2Fifth,.testService .h2Six,.projectService .h2Seven,.blogService .h2Eight{
   animation: increase 2s forwards;
 }
-.chooseUs,.paintService,.TeamService,.priceService{
+.chooseUs,.paintService,.TeamService,.priceService,.testService,.projectService,.blogService{
    display: flex;
    justify-content: center;
    flex-direction: column;
@@ -572,3 +572,202 @@ body{
 .maintain .maintain2{
   padding-top: 20rem;
 }
+.fifthPart::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50px; 
+  background-image: url('data:image/svg+xml;charset=utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none" height="100%" width="100%"><path d="M790.5,93.1c-59.3-5.3-116.8-18-192.6-50c-29.6-12.7-76.9-31-100.5-35.9c-23.6-4.9-52.6-7.8-75.5-5.3 c-10.2,1.1-22.6,1.4-50.1,7.4c-27.2,6.3-58.2,16.6-79.4,24.7c-41.3,15.9-94.9,21.9-134,22.6C72,58.2,0,25.8,0,25.8V100h1000V65.3 c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z" fill="black"/></svg>');
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  filter: brightness(0) invert(1) brightness(100%);
+  padding-top: 30px;
+  z-index: 1;
+  overflow: hidden;
+  -webkit-font-smoothing: antialiased;
+}
+
+/* sixth part */
+.testSlidesContainer{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 2rem;
+  padding-bottom: 10rem;
+}
+.testSlide1,.testSlide2{
+  text-align: center;
+}
+.testSlide1 img, .testSlide2 img{
+  width: 9rem;
+  height: 8rem;
+  object-fit: cover;
+  margin-bottom: -4rem;
+  border: 5px solid darkslategray;
+  border-radius: 5px;
+}
+.testSlide1 .comment,.testSlide2 .comment{
+  width: 100%;
+  background-color: #f3f3f3;
+  border-radius: 5px;
+  padding-top: 3rem;
+  padding-bottom: 1rem;
+  color: black;
+}
+.testSlide1 .comment h3, .testSlide2 .comment h3{
+  font-size: 1.5rem;
+  color: darkslategray;
+  margin-bottom: 0;
+}
+.testSlide1 .comment h4,.testSlide2 .comment h4{
+  margin-top: 0;
+  font-size: 1.1rem;
+  margin-bottom: 0;
+}
+.testSlide1 .comment p,.testSlide2 .comment p{
+  margin-top: .5rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+.sixthPart::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50px; 
+  background-image: url('data:image/svg+xml;charset=utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none" height="100%" width="100%"><path d="M790.5,93.1c-59.3-5.3-116.8-18-192.6-50c-29.6-12.7-76.9-31-100.5-35.9c-23.6-4.9-52.6-7.8-75.5-5.3 c-10.2,1.1-22.6,1.4-50.1,7.4c-27.2,6.3-58.2,16.6-79.4,24.7c-41.3,15.9-94.9,21.9-134,22.6C72,58.2,0,25.8,0,25.8V100h1000V65.3 c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z" fill="black"/></svg>');
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  filter: brightness(0) invert(1) brightness(95.5%);
+  padding-top: 30px;
+  z-index: -20;
+  overflow: hidden;
+  -webkit-font-smoothing: antialiased;
+}
+
+/* seventh part */
+.seventhPart{
+  background-color: #f3f3f3;
+  top: 3rem;
+  border: none;
+  padding-bottom: 10rem;
+}
+.projectShowcase{
+  display: grid;
+  grid-template-columns: repeat(auto,1fr);
+}
+.projectShowcase .project1,.projectShowcase .project2{
+  width: 10rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1.5rem;
+}
+.projectShowcase .project1 img{width: 25rem; 
+  height: 20rem;  
+  object-fit: cover;
+  border-radius: .6rem;
+}
+.projectShowcase .project1 .special-img{
+  width: 45rem;
+}
+.projectShowcase .project2 img{width: 22.8rem;
+   height: 20rem; 
+    object-fit: cover;
+    border-radius: .6rem;
+  }
+  .seventhPart::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50px; 
+    background-image: url('data:image/svg+xml;charset=utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none" height="100%" width="100%"><path d="M790.5,93.1c-59.3-5.3-116.8-18-192.6-50c-29.6-12.7-76.9-31-100.5-35.9c-23.6-4.9-52.6-7.8-75.5-5.3 c-10.2,1.1-22.6,1.4-50.1,7.4c-27.2,6.3-58.2,16.6-79.4,24.7c-41.3,15.9-94.9,21.9-134,22.6C72,58.2,0,25.8,0,25.8V100h1000V65.3 c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z" fill="black"/></svg>');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    filter: brightness(0) invert(1) brightness(100%);
+    padding-top: 30px;
+    z-index: 1;
+    overflow: hidden;
+    -webkit-font-smoothing: antialiased;
+  }
+
+  /* eight part */
+  .eightPart{
+    top: 2rem;
+    border: none;
+    padding-bottom: 10rem;
+  }
+
+  .blogSlidesContainer{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    padding-bottom: 4rem;
+    padding-top: 2rem;
+  }
+  .blogSlide1,.blogSlide2, .blogSlide3{
+    text-align: justify;
+  }
+  .blogSlide1 img, .blogSlide2 img,.blogSlide3 img{
+    width: 23rem;
+    height: 15rem;
+    object-fit: cover;
+    /* margin-bottom: -4rem; */
+    border-radius: 5px;
+  }
+  
+  .blogSlide1 .comment,.blogSlide2 .comment,.blogSlide3 .comment{
+    width: 20rem;
+    background-color: #f3f3f3;
+    border-radius: 5px;
+    padding-top: .1rem;
+    padding-left: 1.2rem;
+    padding-bottom: 2rem;
+    color: black;
+    margin-left: 1rem;
+    margin-top: -2rem;
+    position: relative;
+    z-index: 1;
+  }
+  .blogSlide1 .comment h4, .blogSlide2 .comment h4,.blogSlide3 .comment h4{
+    font-size: 1.2rem;
+    color: darkslategray;
+    margin-bottom: 0;
+  }
+  .blogSlide1 .comment h2,.blogSlide2 .comment h2,.blogSlide3 .comment h2{
+    margin-top: 0;
+    /* font-size: 1.1rem; */
+    margin-bottom: 0;
+  }
+  .blogSlide1 .comment p,.blogSlide2 .comment p,.blogSlide3 .comment p{
+    margin-top: .5rem;
+    padding-right: 2rem;
+  }
+  
+  .eightPart::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50px; 
+    background-image: url('data:image/svg+xml;charset=utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none" height="100%" width="100%"><path d="M790.5,93.1c-59.3-5.3-116.8-18-192.6-50c-29.6-12.7-76.9-31-100.5-35.9c-23.6-4.9-52.6-7.8-75.5-5.3 c-10.2,1.1-22.6,1.4-50.1,7.4c-27.2,6.3-58.2,16.6-79.4,24.7c-41.3,15.9-94.9,21.9-134,22.6C72,58.2,0,25.8,0,25.8V100h1000V65.3 c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z" fill="black"/></svg>');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    filter: brightness(0) invert(1) brightness(40%);
+    padding-top: 30px;
+    z-index: 1;
+    overflow: hidden;
+    -webkit-font-smoothing: antialiased;
+  }
+  footer{
+    background-color: 27323e;
+  }
+ footer .painterContainer .iconsLogo img{
+  width: 5rem;
+ }
