--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,11 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding-bottom: 2000px;
+  width: 100%;
   overflow-x: hidden;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 /* Main Header */
@@ -20,8 +23,8 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 8rem;
-  
+  height: auto;
+  padding-bottom: 3rem;
 }
 .sectionHeader{
   display: flex;
@@ -31,6 +34,7 @@
   padding-left: 15px;
   padding-right: 15px;
 }
+
 .mainHeader .iconsLogo img{
   width: 3rem;
   filter: brightness(0) invert(1) brightness(100%);
@@ -107,7 +111,7 @@
 .secondHeader{
   position: absolute;
   background-color: rgb(89, 138, 138);
-  top: 128px;
+  top: 104px;
   left: 0;
   right: 0;
   padding: 1rem;
@@ -138,6 +142,9 @@ gap: 40px;
 .linkHome,.linkAbout,.linkPages, .linkService, .linkProject, .linkContact{
   text-decoration: none;
   color: black;
+}
+.invisibleNavigate,.invisibleSocials,.invisibleAppoint{
+  visibility: hidden;
 }
 
 .appointContainer{width: 12rem;
@@ -173,10 +180,56 @@ body{
   background-size: cover;
   height: 100vh;
   position: relative;
-  top: 4rem;
+  top: 2rem;
   z-index: -1;  
   border-bottom: 1px wavy black;
   border: none;
+  padding-bottom: 30rem;
+}
+@media only screen and (max-width:1080px){
+  .sectionHeader{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .iconsLogo{
+    padding-left: 15rem;
+  }
+  .secondHeader{
+    top: 15rem;
+  }
+  .allContacts{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+  }
+  .sticky{
+    top: 0;
+  }
+  .introductory{
+    margin-right: -1rem;
+  }
+}
+.flexAppoint{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 2rem;
+  gap: 1rem;
+  margin-bottom: -1rem;
+  margin-top: -1rem;
+  margin-right: 2rem;
+}
+@media only screen and (max-width:992px) {
+  .secondHeader{
+    padding-bottom: 0;
+    padding-top: 0;
+    top: 12rem;
+  }
+  .mainHeader{
+    padding-bottom: 0;
+  }
+  .sticky{top: 0};
 }
 .introductory::after {
   content: "";
@@ -184,7 +237,8 @@ body{
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 50px; 
+  height: 60px; 
+  margin-bottom: -0.3rem;
   background-image: url('data:image/svg+xml;charset=utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none" height="100%" width="100%"><path d="M790.5,93.1c-59.3-5.3-116.8-18-192.6-50c-29.6-12.7-76.9-31-100.5-35.9c-23.6-4.9-52.6-7.8-75.5-5.3 c-10.2,1.1-22.6,1.4-50.1,7.4c-27.2,6.3-58.2,16.6-79.4,24.7c-41.3,15.9-94.9,21.9-134,22.6C72,58.2,0,25.8,0,25.8V100h1000V65.3 c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z" fill="black"/></svg>');
   background-size: 100% 100%;
   background-repeat: no-repeat;
@@ -194,6 +248,7 @@ body{
 .introContainer{
   padding-top: 12rem;
   padding-left: 6rem;
+  height: 100%;
 }
 .introContainer h2{
   width: 30rem;
@@ -222,7 +277,7 @@ body{
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 50px; 
+  height: 60px; 
   background-image: url('data:image/svg+xml;charset=utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none" height="100%" width="100%"><path d="M790.5,93.1c-59.3-5.3-116.8-18-192.6-50c-29.6-12.7-76.9-31-100.5-35.9c-23.6-4.9-52.6-7.8-75.5-5.3 c-10.2,1.1-22.6,1.4-50.1,7.4c-27.2,6.3-58.2,16.6-79.4,24.7c-41.3,15.9-94.9,21.9-134,22.6C72,58.2,0,25.8,0,25.8V100h1000V65.3 c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z" fill="black"/></svg>');
   background-size: 100% 100%;
   background-repeat: no-repeat;
@@ -266,7 +321,7 @@ body{
 
 .gridchooseUs{
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  grid-template-columns: repeat(3,auto);
 }
 
 .smallcontainer1,.smallcontainer2,.smallcontainer4,.smallcontainer5{
@@ -329,7 +384,6 @@ body{
   border: none;
   background-color: #f3f3f3;
   border: none;
-  
 }
 .paintService h2,.TeamService h2{
   margin-bottom: 0;
@@ -419,23 +473,70 @@ body{
   padding-bottom: 10rem;
 }
 .teamMembers,.fifthFlex{
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  gap: 2%;
 }
 
 .teammate{
-  width: 17rem;
+  width: 100%;
   border: none;
   border-radius: 0.6rem;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.teammate img{
+@media only screen and (max-width:992px) {
+  .gridchooseUs{
+    grid-template-columns: repeat(2,auto);
+  }
+  .smallcontainer1,.smallcontainer2,.smallcontainer3,.smallcontainer4,.smallcontainer5{
+    border: none;
+    padding: 0;
+    margin-bottom: 2rem;
+  }
+  .teamMembers{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+  }
+}
+.teammate1 img,.teammate2 img,.teammate3 img,.teammate4 img{
   width: 100%;
   height: 12rem;
   border-top-left-radius: 0.6rem;
   border-top-right-radius: 0.6rem;
+  object-fit: cover;
+  position: relative;
+}
+.floatSocials{
+  position: absolute;
+  color: rgb(36, 36, 36);
+  top: 0;
+  background-color: rgba(61, 61, 61, 0.452);
+  left: 0;
+  right: 0;
+  bottom: 7rem;
+  border-top-left-radius: 0.6rem;
+  border-top-right-radius: 0.6rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
+  opacity: 0;
+  transition: opacity .8s ease-in-out;
+}
+.floatSocials button{
+  font-size: 1.5rem;
+  text-align: center;
+  border: none;
+  border-radius: 2px;
+  padding-top: 5px;
+}
+
+.linkStyle{
+  color: black;
+}
+.floatSocials:hover{
+  opacity: 1;
 }
 
 .teammate h4, .teammate h6{
@@ -456,13 +557,14 @@ body{
  margin-top: 0;
  padding-top: 0;
 }
+
 .thirdPart::after {
   content: "";
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 50px; 
+  height: 60px; 
   background-image: url('data:image/svg+xml;charset=utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none" height="100%" width="100%"><path d="M790.5,93.1c-59.3-5.3-116.8-18-192.6-50c-29.6-12.7-76.9-31-100.5-35.9c-23.6-4.9-52.6-7.8-75.5-5.3 c-10.2,1.1-22.6,1.4-50.1,7.4c-27.2,6.3-58.2,16.6-79.4,24.7c-41.3,15.9-94.9,21.9-134,22.6C72,58.2,0,25.8,0,25.8V100h1000V65.3 c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z" fill="black"/></svg>');
   background-size: 100% 100%;
   background-repeat: no-repeat;
@@ -479,7 +581,7 @@ body{
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 50px; 
+  height: 60px;
   background-image: url('data:image/svg+xml;charset=utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none" height="100%" width="100%"><path d="M790.5,93.1c-59.3-5.3-116.8-18-192.6-50c-29.6-12.7-76.9-31-100.5-35.9c-23.6-4.9-52.6-7.8-75.5-5.3 c-10.2,1.1-22.6,1.4-50.1,7.4c-27.2,6.3-58.2,16.6-79.4,24.7c-41.3,15.9-94.9,21.9-134,22.6C72,58.2,0,25.8,0,25.8V100h1000V65.3 c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z" fill="black"/></svg>');
   background-size: 100% 100%;
   background-repeat: no-repeat;
@@ -498,16 +600,22 @@ body{
   border: none;
   padding-bottom: 10rem;
 }
+.fifthFlex {
+  margin-top: 2rem;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(100px, auto));
+  gap: 1.5rem;
+}
 
 .singleVisit,.demand,.maintain{
   border: none;
   border-radius: 0.6rem;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   position: relative;
-  width: 22rem;
+  transition: transform .2s ease-in-out
 }
 .singleVisit,.maintain{
-  margin-top: 10rem;
+  margin-top: 7rem;
 }
 .singleVisit .singleVisit1,.demand .demand1,.maintain .maintain1{
   background-color: darkslategray;
@@ -522,8 +630,6 @@ body{
 
 .singleVisit,.demand,.maintain{
   text-align: center;
-  font-size: 1.3rem;
-  
 }
 
 .singleVisit1 button, .demand1 button,.maintain1 button{
@@ -544,7 +650,6 @@ body{
   padding-top: 20rem;
   color: black;
 }
-
 .singleVisit2 button,.demand2 button, .maintain2 button{
   border: none;
   background-color: darkslategray;
@@ -572,13 +677,30 @@ body{
 .maintain .maintain2{
   padding-top: 20rem;
 }
+.fifthFlex .maintain:hover{
+  transform: scale(1.1);
+}
+.singleVisit:hover{
+  transform: scale(1.1);
+}
+.fifthFlex .demand:hover{
+  transform: scale(1.1);
+}
+@media only screen and (max-width:992px) {
+  .fifthFlex{
+    grid-template-columns: 1fr;
+  }
+  .maintain{
+    margin-top: 0;
+  }
+}
 .fifthPart::after {
   content: "";
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 50px; 
+  height: 60px; 
   background-image: url('data:image/svg+xml;charset=utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none" height="100%" width="100%"><path d="M790.5,93.1c-59.3-5.3-116.8-18-192.6-50c-29.6-12.7-76.9-31-100.5-35.9c-23.6-4.9-52.6-7.8-75.5-5.3 c-10.2,1.1-22.6,1.4-50.1,7.4c-27.2,6.3-58.2,16.6-79.4,24.7c-41.3,15.9-94.9,21.9-134,22.6C72,58.2,0,25.8,0,25.8V100h1000V65.3 c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z" fill="black"/></svg>');
   background-size: 100% 100%;
   background-repeat: no-repeat;
@@ -601,7 +723,7 @@ body{
   text-align: center;
 }
 .testSlide1 img, .testSlide2 img{
-  width: 9rem;
+  width: 10rem;
   height: 8rem;
   object-fit: cover;
   margin-bottom: -4rem;
@@ -637,7 +759,7 @@ body{
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 50px; 
+  height: 60px; 
   background-image: url('data:image/svg+xml;charset=utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none" height="100%" width="100%"><path d="M790.5,93.1c-59.3-5.3-116.8-18-192.6-50c-29.6-12.7-76.9-31-100.5-35.9c-23.6-4.9-52.6-7.8-75.5-5.3 c-10.2,1.1-22.6,1.4-50.1,7.4c-27.2,6.3-58.2,16.6-79.4,24.7c-41.3,15.9-94.9,21.9-134,22.6C72,58.2,0,25.8,0,25.8V100h1000V65.3 c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z" fill="black"/></svg>');
   background-size: 100% 100%;
   background-repeat: no-repeat;
@@ -657,10 +779,10 @@ body{
 }
 .projectShowcase{
   display: grid;
-  grid-template-columns: repeat(auto,1fr);
+  grid-template-columns: 1fr;
 }
 .projectShowcase .project1,.projectShowcase .project2{
-  width: 10rem;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -670,14 +792,18 @@ body{
   height: 20rem;  
   object-fit: cover;
   border-radius: .6rem;
+  width: 25rem;
+  max-width: 100%;
 }
 .projectShowcase .project1 .special-img{
   width: 45rem;
 }
 .projectShowcase .project2 img{width: 22.8rem;
-   height: 20rem; 
+    height: 20rem; 
     object-fit: cover;
     border-radius: .6rem;
+    width: 40rem;
+    max-width: 100%;
   }
   .seventhPart::after {
     content: "";
@@ -685,7 +811,7 @@ body{
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 50px; 
+    height: 60px; 
     background-image: url('data:image/svg+xml;charset=utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none" height="100%" width="100%"><path d="M790.5,93.1c-59.3-5.3-116.8-18-192.6-50c-29.6-12.7-76.9-31-100.5-35.9c-23.6-4.9-52.6-7.8-75.5-5.3 c-10.2,1.1-22.6,1.4-50.1,7.4c-27.2,6.3-58.2,16.6-79.4,24.7c-41.3,15.9-94.9,21.9-134,22.6C72,58.2,0,25.8,0,25.8V100h1000V65.3 c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z" fill="black"/></svg>');
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -709,20 +835,20 @@ body{
     gap: 1.5rem;
     padding-bottom: 4rem;
     padding-top: 2rem;
+    width: 100%;
   }
   .blogSlide1,.blogSlide2, .blogSlide3{
-    text-align: justify;
+    width: 100%;
   }
   .blogSlide1 img, .blogSlide2 img,.blogSlide3 img{
-    width: 23rem;
+    width: 100%;
     height: 15rem;
     object-fit: cover;
-    /* margin-bottom: -4rem; */
     border-radius: 5px;
   }
   
   .blogSlide1 .comment,.blogSlide2 .comment,.blogSlide3 .comment{
-    width: 20rem;
+    width: 80%;
     background-color: #f3f3f3;
     border-radius: 5px;
     padding-top: .1rem;
@@ -741,33 +867,142 @@ body{
   }
   .blogSlide1 .comment h2,.blogSlide2 .comment h2,.blogSlide3 .comment h2{
     margin-top: 0;
-    /* font-size: 1.1rem; */
     margin-bottom: 0;
   }
   .blogSlide1 .comment p,.blogSlide2 .comment p,.blogSlide3 .comment p{
     margin-top: .5rem;
     padding-right: 2rem;
   }
-  
+  @media only screen and (max-width:992px) {
+    .blogSlide1 .comment, .blogSlide2 .comment, .blogSlide3 .comment{
+      padding-right: 0;
+      margin-left: 4rem;
+    }
+    .blogSlidesContainer{
+      display: grid;
+      grid-template-columns: 1fr;
+    }
+    
+  }
   .eightPart::after {
     content: "";
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 50px; 
+    height: 60px; 
+    margin-bottom: -0.3rem;
+    margin-right: -5rem;
     background-image: url('data:image/svg+xml;charset=utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none" height="100%" width="100%"><path d="M790.5,93.1c-59.3-5.3-116.8-18-192.6-50c-29.6-12.7-76.9-31-100.5-35.9c-23.6-4.9-52.6-7.8-75.5-5.3 c-10.2,1.1-22.6,1.4-50.1,7.4c-27.2,6.3-58.2,16.6-79.4,24.7c-41.3,15.9-94.9,21.9-134,22.6C72,58.2,0,25.8,0,25.8V100h1000V65.3 c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z" fill="black"/></svg>');
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    filter: brightness(0) invert(1) brightness(40%);
+    filter: brightness(0) invert(1) brightness(10%);
     padding-top: 30px;
     z-index: 1;
     overflow: hidden;
     -webkit-font-smoothing: antialiased;
   }
   footer{
-    background-color: 27323e;
+    background-color: rgb(24, 24, 24);
+    top: 2rem;
+    padding-top: 3rem;
+    border: none;
+    padding-bottom: 2rem;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(4,auto);
+    justify-content: space-between;
+    gap: 2rem;
   }
- footer .painterContainer .iconsLogo img{
+
+ footer .painterContainer {
+  display: flex;
+  flex-direction: column;
+ }
+ 
+ footer .painterContainer .iconsLogo1{
+  display: flex;
+  align-items: center;
+  font-size: 2rem;
+ }
+ footer .painterContainer .iconsLogo1 img{
   width: 5rem;
+  filter: brightness(0) invert(1) brightness(80%);
+ }
+ footer .painterContainer .notes{
+  width: 18rem;
+ }
+ .recentPost{
+  padding-left: 0;
+ }
+ .recentPost h2{
+  margin-bottom: 0;
+  padding-bottom: 0;
+ }
+ footer .mainrecentPost{
+  display: grid;
+  grid-template-columns:1fr ;
+ }
+ .smallGirdPost1,.smallGirdPost2{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+ }
+ .img-p{
+  padding: 0;
+  margin-right: 1rem;
+ }
+ .smallGirdPost1 img, .smallGirdPost2 img{
+  width: 5rem;
+  height: 5rem;
+  object-fit: cover;
+  border-radius: .5rem;
+ }
+ .girdNotes h3{
+  margin-bottom: 0;
+  font-size: 1rem;
+ }
+ .girdNotes p{
+  margin-top: 0;
+ }
+ .girdNotes{
+  font-size: .8rem;
+ }
+ .smallGirdPost2{
+  border-top: .5px solid white;
+ }
+ .instagram-gird{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: .4rem;
+ }
+ .instagram-gird img{
+  width: 100%;
+  height: 4rem;
+  object-fit: cover;
+  border-radius: .5rem;
+ }
+ .contactInfo{
+  padding-right: 10rem;
+ }
+ .cp{
+  padding-right: .5rem;
+  color: rgb(84, 155, 155);
+ }
+ .contactInfo p{
+  font-size: .9rem;
+ }
+
+ @media only screen and (max-width:992px) {
+  footer{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    overflow-x: hidden;
+  }
+  .recentPost{
+    margin-left: -8rem;
+  }
+  .smallGirdPost1, .smallGirdPost2{
+    width: 50%;
+  }
  }
