--- a/src/index.css
+++ b/src/index.css
@@ -9,11 +9,11 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  width: 100%;
-  overflow-x: hidden;
-  height: 100%;
   margin: 0;
   padding: 0;
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 /* Main Header */
@@ -187,6 +187,12 @@ body{
   padding-bottom: 30rem;
 }
 @media only screen and (max-width:1080px){
+  .mainHeader{
+    margin-right: -1rem;
+  }
+  .secondHeader{
+    margin-right: -1rem;
+  }
   .sectionHeader{
     display: flex;
     flex-direction: column;
@@ -218,7 +224,7 @@ body{
   gap: 1rem;
   margin-bottom: -1rem;
   margin-top: -1rem;
-  margin-right: 2rem;
+  margin-right: 5%;
 }
 @media only screen and (max-width:992px) {
   .secondHeader{
@@ -288,7 +294,7 @@ body{
   -webkit-font-smoothing: antialiased;
 }
 
-.chooseUs p, .paintService p, .TeamService p, .priceService p,.testService p,.projectService p,.blogService p{width: 30rem;}
+.chooseUs p, .paintService p, .TeamService p, .priceService p,.testService p,.projectService p,.blogService p{width: 100%;}
 
 @keyframes increase {
   0% {
@@ -908,7 +914,6 @@ body{
     padding-top: 3rem;
     border: none;
     padding-bottom: 2rem;
-    width: 100%;
     display: grid;
     grid-template-columns: repeat(4,auto);
     justify-content: space-between;
@@ -992,17 +997,122 @@ body{
  .contactInfo p{
   font-size: .9rem;
  }
-
+@media only screen and (max-width:1080px) {
+  .mainPage,.mainHeader,.secondHeader,footer{
+    overflow-x: hidden;
+    margin-right: -2rem;
+  }
+  footer{
+    margin-top: -2.2rem;
+  }
+  .seventhPart,.fifthPart{
+    margin-top: -.2rem;
+  }
+}
  @media only screen and (max-width:992px) {
   footer{
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    overflow-x: hidden;
-  }
-  .recentPost{
-    margin-left: -8rem;
   }
   .smallGirdPost1, .smallGirdPost2{
-    width: 50%;
+    width: 80%;
+  }
+  .sixthPart{
+    margin-top: -.6rem;
+  }
+  .secondHeader{
+    margin-bottom: 5rem;
+  }
+  .singleVisit,.demand{
+    margin-bottom: 4rem;
   }
  }
+
+@media only screen and (max-width:940px) {
+  .flexAppoint{
+    margin-left: -20rem;
+  }
+  .gridchooseUs,.testSlidesContainer,footer{
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .projectShowcase .project1,.projectShowcase .project2{
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .projectShowcase .project1 img{
+    width: 100%;
+  }
+}
+@media only screen and (max-width:650px) {
+  .flexAppoint{
+    margin-left: -50rem;
+  }
+  .blogSlide1 .comment, .blogSlide2 .comment, .blogSlide3 .comment{
+    padding-right: 0;
+    margin-left: 2rem;
+  }
+  .mainHeader{
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+  .teamMembers{
+    grid-template-columns: 1fr;
+  }
+  .teammate4{
+    margin-bottom: 3rem;
+  }
+}
+.contactInvisile{
+  visibility: hidden;
+}
+@media only screen and (max-width:580px) {
+  .sectionHeader{
+   flex-direction: row;
+   padding-left: 15rem;
+   justify-content: center;
+  }
+  .secondHeader{
+    top: 8rem;
+  }
+  .sticky{
+    top: 0;
+  }
+  .paintServiceGird{
+    display: grid;
+    grid-template-columns: 1fr;
+    border-radius: 2rem;
+    width: 100%;
+    height: 100%;
+    margin-top: 2rem;
+  }
+  .paintContainer1{
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .btnMsg{border: none;
+  background-color: white;}
+  .btnMsg{
+    width: 20rem;
+    border-radius: 0;
+    border-top-left-radius: 2rem;
+    border-top-right-radius: 2rem;
+  }
+  .btnMsg:hover{
+    border: none;
+  }
+  .secondPaintContainer{
+    width: 22.5rem;
+    border-radius: 0;
+    margin-top: -1rem;
+    border-bottom-left-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+    box-shadow: none;
+  }
+  .introContainer h2{
+    width: 100%;
+  }
+  .introContainer p{
+    width: 80%;
+  }
+}
